add_subdirectory(Chapter_02/HelloWorld/)
add_subdirectory(Chapter_03/OpenCLConvolution/)
add_subdirectory(Chapter_03/OpenCLInfo/)
add_subdirectory(Chapter_06/HelloBinaryWorld/)
add_subdirectory(Chapter_07/SimpleBufferSubBuffer/)
# add_subdirectory(Chapter_08/ImageFilter2D/)
# add_subdirectory(Chapter_10/GLinterop/)
# add_subdirectory(Chapter_11/D3Dinterop/)
# add_subdirectory(Chapter_12/Sinewave/)
# add_subdirectory(Chapter_12/VectorAdd/)
add_subdirectory(Chapter_14/histogram/)
# add_subdirectory(Chapter_16/Dijkstra/)
# add_subdirectory(Chapter_19/oclFlow/)
add_subdirectory(Chapter_22/spmv/)
